--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "otel-js-instrumentation",
+  "name": "@digma/otel-js-instrumentation",
   "version": "1.0.0",
   "description": "",
   "main": "out/index.js",
