Pass the NPM_TOKEN secret to the publish npm token reusable workflow

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -5,3 +5,5 @@ on:
 jobs:
   publish-npm-package:
     uses: digma-ai/github-workflows/.github/workflows/publish-npm-package.yml@main
+    with:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
