--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -5,5 +5,5 @@ on:
 jobs:
   publish-npm-package:
     uses: digma-ai/github-workflows/.github/workflows/publish-npm-package.yml@main
-    with:
+    secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
