Attempt to inherit NPM_TOKEN secret

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -5,5 +5,4 @@ on:
 jobs:
   publish-npm-package:
     uses: digma-ai/github-workflows/.github/workflows/publish-npm-package.yml@main
-    secrets:
-      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    secrets: inherit
