Support manual trigger for npm publish workflow

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -1,7 +1,10 @@
 name: Publish Package to npmjs
+
 on:
   release:
     types: [created]
+  workflow_dispatch:
+
 jobs:
   publish-npm-package:
     uses: digma-ai/github-workflows/.github/workflows/publish-npm-package.yml@main
