Update the package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@digma/otel-js-instrumentation",
   "version": "0.0.6",
-  "description": "",
+  "description": "This instrumentation package for JavaScript enriches the telemtry data collected by OpenTelemetry and helps Digma provide valuable insights and continuous feedback directly in the IDE.",
   "main": "out/index.js",
   "scripts": {
     "test": "echo \" Error: no test specified\" && exit 1",
